app/assets/stylesheets/common/display.scss
// 置中

.center {
  text-align: center;
}

.inline-block {
  display: inline-block;
}

.fixed-br {
  position: fixed;
  z-index: 10;
  right:20px;
  bottom: 20px;
}

.pointer {
  cursor: pointer;
}

.w30 {
  width: 30%;
}

// input

.no-outline-input {
  background: inherit;
  // border-top: none;
  // border-left: none;
  // border-right: none;
  border: 0;
  outline: none;
  // border-bottom: 1px solid #fff;
  background-color:transparent;
  padding: 6px;
  width: 100%;
  &:focus {
    // border-top: none;
    // border-left: none;
    // border-right: none;
    border: 0;
    outline: none;
    // border-bottom: 1px solid #fff;
    background-color:transparent;
  }
}


// color
.white {
  color: #fff;
}

// font size

.font-13 {
  font-size: 13px;
}

.font-15 {
  font-size: 15px;
}

.font-20 {
  font-size: 20px;
}

.font-25 {
  font-size: 25px;
}

.font-30 {
  font-size: 30px;
}

.font-35 {
  font-size: 35px;
}

.font-40 {
  font-size: 40px;
}

.font-45 {
  font-size: 45px;
}

.font-50 {
  font-size: 50px;
}

.font-55 {
  font-size: 55px;
}

// font weight
.lighter {
  font-weight: 300;
}

// bootstrap col padding 0

.no-gutters {
  margin-right: 0;
  margin-left: 0;

  > .col,
  > [class*="col-"] {
    padding-right: 0;
    padding-left: 0;
  }
}

